// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IncrementControl Init should work 1`] = `
<body>
  <div>
    <div>
      <input
        class="linearslider"
        id="linearrangeinput"
        max="1000"
        min="1"
        type="range"
        value="0"
      />
      <label
        class="LinearRangeLabel"
        id="lrclabel"
      >
        0
      </label>
    </div>
  </div>
</body>
`;

exports[`IncrementControl Slider should work 1`] = `
<body>
  <div>
    <div>
      <input
        class="linearslider"
        id="linearrangeinput"
        max="1000"
        min="1"
        type="range"
        value="0"
      />
      <label
        class="LinearRangeLabel"
        id="lrclabel"
      />
    </div>
  </div>
</body>
`;

exports[`IncrementControl Update View should Work 1`] = `
<body>
  <div>
    <div>
      <input
        class="linearslider"
        id="linearrangeinput"
        max="1000"
        min="1"
        type="range"
        value="0"
      />
      <label
        class="LinearRangeLabel"
        id="lrclabel"
      />
    </div>
  </div>
</body>
`;

exports[`IncrementControl Update View with value should work 1`] = `
<body>
  <div>
    <div>
      <input
        class="linearslider"
        id="linearrangeinput"
        max="1000"
        min="1"
        type="range"
        value="0"
      />
      <label
        class="LinearRangeLabel"
        id="lrclabel"
      />
    </div>
  </div>
</body>
`;
